crates/analyzer/tests/snapshots/errors__duplicate_var_in_for_loop.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: duplicate definition of variable `x`
  ┌─ compile_errors/duplicate_var_in_for_loop.fe:3:13
  │
3 │         let x: u256 = 10
  │             ^ `x` first defined here
  ·
6 │         for x in xs {
  │             - `x` redefined here

error: `+` operand types are not compatible
  ┌─ compile_errors/duplicate_var_in_for_loop.fe:7:13
  │
7 │             sum += x
  │             ^^^    ^ this has type `u256`
  │             │       
  │             this has type `u8`


